<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.setting.SettingFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@id/Guide_left_vertical"
        app:layout_constraintRight_toRightOf="@id/Guide_right_vertical"
        app:layout_constraintTop_toTopOf="@id/Guide_top_horizontal"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/img_message"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_message" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aguafina_script"
            android:gravity="left"
            android:text="@string/messages"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <EditText

        android:id="@+id/name"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:gravity="left"
        android:hint="@string/name_user"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/Guide_right_vertical"
        app:layout_constraintStart_toStartOf="@+id/Guide_left_vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="RtlHardcoded" />

    <EditText

        android:id="@+id/email"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="left"
        android:hint="@string/email_address"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/Guide_right_vertical"
        app:layout_constraintStart_toStartOf="@+id/Guide_left_vertical"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#2F000000"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <LinearLayout
        android:id="@+id/linearLayout_setting"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toStartOf="@+id/Guide_right_vertical"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="@+id/Guide_left_vertical"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/img_setting"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_setting" />

        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/aguafina_script"
            android:gravity="left"
            android:text="@string/settings"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />

    </LinearLayout>


    <Switch
        android:id="@+id/sync"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:text="@string/sync"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/Guide_right_vertical"
        app:layout_constraintStart_toStartOf="@+id/Guide_left_vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_setting"
        tools:ignore="MissingConstraints,RtlHardcoded,UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/sync_update_app"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:gravity="left"
        android:text="@string/sync_update_app"
        android:textColor="@color/black"
        android:textOff="کاربر خودش بروزرسانی برنامه را انجام میدهد ."
        android:textOn="برنامه خودکار بروزرسانی میشود. "
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/Guide_right_vertical"
        app:layout_constraintStart_toStartOf="@+id/Guide_left_vertical"
        app:layout_constraintTop_toBottomOf="@+id/sync"
        tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#2F000000"
        app:layout_constraintTop_toBottomOf="@+id/sync_update_app" />

    <LinearLayout
        android:id="@+id/linearLayout_notifications"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toStartOf="@+id/Guide_right_vertical"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="@+id/Guide_left_vertical"
        app:layout_constraintTop_toBottomOf="@+id/sync_update_app"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/img_notifications"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_notifications" />

        <TextView
            android:id="@+id/tv_notifications"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/aguafina_script"
            android:gravity="left"
            android:text="@string/notifications"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />

    </LinearLayout>

    <Switch
        android:id="@+id/notifications"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:outlineAmbientShadowColor="@color/purple_500"
        android:outlineSpotShadowColor="@color/purple_500"
        android:shadowColor="@color/purple_500"
        android:text="@string/notifications_alarm"
        android:textColor="@color/black"
        android:textOff="شما هیچ اعلانی را دریافت نمیکنید"
        android:textOn="شما تمامی اعلانات را دریافت میکنید"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/Guide_right_vertical"
        app:layout_constraintStart_toStartOf="@+id/Guide_left_vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_notifications"
        tools:ignore="MissingConstraints,RtlHardcoded,UnusedAttribute,UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_volume"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:gravity="left"
        android:text="@string/volume"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/Guide_right_vertical"
        app:layout_constraintStart_toStartOf="@+id/Guide_left_vertical"
        app:layout_constraintTop_toBottomOf="@+id/notifications"
        tools:ignore="MissingConstraints,RtlHardcoded,UseSwitchCompatOrMaterialXml" />

    <SeekBar
        android:id="@+id/volume_notifications"
        android:layout_width="270dp"
        android:layout_height="20dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toStartOf="@+id/Guide_right_vertical"
        app:layout_constraintStart_toStartOf="@+id/Guide_left_vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_volume"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guide_left_vertical"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guide_right_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guide_top_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guide_down_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>