<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image2"
    tools:context=".ui.register.RegisterFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#805D1049"
        tools:ignore="Orientation"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/iran_sans_mobile"
        android:gravity="center"
        android:text="@string/new_account"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttonshapewhite"
        android:drawableStart="@drawable/ic_person_black"
        android:drawablePadding="5dp"
        android:fontFamily="@font/iran_sans_mobile"
        android:gravity="left"
        android:hint="@string/name_user"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <EditText
        android:id="@+id/etEmailId"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshapewhite"
        android:drawableStart="@drawable/ic_email_black"
        android:drawablePadding="5dp"
        android:fontFamily="@font/iran_sans_mobile"
        android:gravity="left"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        tools:ignore="MissingConstraints,RtlHardcoded,TextFields" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshapewhite"
        android:drawableStart="@drawable/ic_phone_black"
        android:drawablePadding="5dp"
        android:fontFamily="@font/iran_sans_mobile"
        android:gravity="left"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailId"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <EditText
        android:id="@+id/etDeliveryAddress"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshapewhite"
        android:drawableStart="@drawable/ic_edit_location_black"
        android:drawablePadding="5dp"
        android:fontFamily="@font/iran_sans_mobile"
        android:gravity="left"
        android:hint="@string/delivery_address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMobileNumber"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshapewhite"
        android:drawableStart="@drawable/ic_lock_black"
        android:drawablePadding="5dp"
        android:fontFamily="@font/iran_sans_mobile"
        android:gravity="left"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDeliveryAddress"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <EditText
        android:id="@+id/etTruePassword"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshapewhite"
        android:drawableStart="@drawable/ic_lock_black"
        android:drawablePadding="5dp"
        android:fontFamily="@font/iran_sans_mobile"
        android:gravity="left"
        android:hint="@string/true_password"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshapegrey"
        android:drawablePadding="5dp"
        android:fontFamily="@font/iran_sans_mobile"
        android:gravity="center"
        android:importantForAutofill="no"
        android:maxLines="1"
        android:padding="10dp"
        android:text="@string/register"
        android:textColor="#fafafa"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTruePassword"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guide_left_vertical"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guide_right_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guide_top_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guide_down_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>