<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image2"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#805D1049"
        tools:ignore="Orientation"
        tools:layout_editor_absoluteX="-30dp"
        tools:layout_editor_absoluteY="60dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/iran_sans_mobile"
        android:gravity="center"
        android:text="@string/profile_particulars"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/buttonshapewhite"
        android:drawableStart="@drawable/ic_person_black"
        android:drawablePadding="5dp"
        android:fontFamily="@font/iran_sans_mobile"
        android:gravity="left"
        android:hint="@string/name_user"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <EditText
        android:id="@+id/etEmailId"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshapewhite"
        android:drawableStart="@drawable/ic_email_black"
        android:drawablePadding="5dp"
        android:fontFamily="@font/iran_sans_mobile"
        android:gravity="left"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="MissingConstraints,RtlHardcoded,TextFields" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshapewhite"
        android:drawableStart="@drawable/ic_phone_black"
        android:drawablePadding="5dp"
        android:fontFamily="@font/iran_sans_mobile"
        android:gravity="left"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailId"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guide_left_vertical"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guide_right_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guide_top_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guide_down_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>